fix alignment

--- a/src/main/resources/public/stylesheets/userHome.css
+++ b/src/main/resources/public/stylesheets/userHome.css
@@ -100,7 +100,7 @@ input {
     padding-left: 2em;
     padding-right: 2em;
     margin: auto;
-    height: 300px;
+    height: 350px;
     background-color: #e7f6e1;
     padding: 25px 50px 25px 50px;
     border: 5px white;
@@ -116,7 +116,7 @@ input {
 .reviewName {
     position: relative; 
     left: 10px; 
-    top: -15px;
+    
     font-size: 20px;
 }
 
